backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: congdon-backend
  labels:
    app: congdon-backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: congdon-backend
