frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: congdon-frontend
  labels:
    app: congdon-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: congdon-frontend
