ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: congdon-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: congdon-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: congdon-frontend
            port:
              number: 80
